[tool.poetry]
name = "docker-postgres-backup"
version = "0.1.0"
description = ""
authors = ["akhilrs <hello@akhil.rs>"]

[tool.poetry.dependencies]
python = "^3.8"
azure-storage-blob = "12.7.1"
boto3 = "1.14.44"
aiohttp = "3.7.3"
aioboto3 = "^8.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
